tests/fixtures/valid/list/list_string.py
# List of strings
strs: list[str] = ["hello", "world", "test"]

print(strs[0])
print(strs[1])
print(strs[2])
print(len(strs))
