tests/fixtures/invalid/str_bitand_list.py
# Cannot bitwise AND Str and List[int]
x: str = "hello" & [1, 2, 3]
